# data-trove

./: .gitignore  LICENSE  README.md  pyproject.toml
data_trove/: dummy_csv.csv  kafka_connector.py  kafka_setup.py  spark_connector.py
