[tool.poetry]
name = "data-trove"
version = "0.1.0"
description = ""
authors = ["srg9000 <sajangohil11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
kafka-python-ng = "^2.2.2"
pyspark = "^3.5.1"
avro = "^1.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
